--- a/index.htm
+++ b/index.htm
@@ -58,75 +58,9 @@ if(MSFPhover) { MSFPnav5n=MSFPpreload("_derived/feedback.htm_cmp_sky010_vbtn.gif
 		<td valign="top" width="5" style="border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium; border-bottom-style:none; border-bottom-width:medium">
 		</td>
 		<td valign="top" width="100%" height="100%" style="border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium; border-bottom-style:none; border-bottom-width:medium">
-		<h3>Welcome to my Web site!</h3>
-		<p align="left">The home page is a good spot to let visitors know the purpose 
-		of this Web site. The home page gives visitors an impression of your site's 
-		style. </p>
-		<center>
-		<table border="0" width="100%" cellspacing="0" cellpadding="5" height="325">
-			<tr>
-				<td width="50%" align="left" valign="top" style="border-left-style:none; border-left-width:medium; border-right-style:none; border-right-width:medium; border-top-style:solid; border-top-width:1; border-bottom-style:none; border-bottom-width:medium" height="30">
-				<h3><a href="favorite.htm">Favorite Links</a></h3>
-				</td>
-				<td width="50%" align="left" valign="top" style="border-right-style:none; border-right-width:medium; border-top-style:solid; border-top-width:1; border-bottom-style:none; border-bottom-width:medium" height="30">
-				<h3>Weather</h3>
-				</td>
-			</tr>
-			<tr>
-				<td width="50%" align="left" valign="top" style="border-left-style:none; border-left-width:medium; border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium" height="178">
-				<!--webbot bot="PurpleText" preview="This space could be used to list frequently visited sites." -->
-				<p></p>
-				<table border="0" cellpadding="0" cellspacing="0" width="100%">
-					<tr>
-						<td valign="top" width="100%">
-						<ul>
-							<li><a href="http://www.example.com">Visit Example.com</a></li>
-							<li><a href="http://www.example.org">See Example.org</a>
-							</li>
-							<li><a href="http://www.example.net">Look at Example.net</a>
-							</li>
-						</ul>
-						</td>
-					</tr>
-				</table>
-				<p></p>
-				</td>
-				<td width="50%" align="left" valign="top" style="border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium" height="178">
-				<!--webbot bot="PurpleText" preview="This space can be used to place some information that is useful to you (i.e.-Weather, News Headlines, etc.)" -->
-				<p>Redmond, WA - Sunny <br>
-				<br>
-				High: 85 , Low: 70 degrees</p>
-				</td>
-			</tr>
-			<tr>
-				<td width="50%" align="left" valign="top" style="border-left-style:none; border-left-width:medium; border-right-style:none; border-right-width:medium; border-top-style:solid; border-top-width:1; border-bottom-style:none; border-bottom-width:medium" height="41">
-				<h3><a href="photo.htm">Photo Album</a></h3>
-				</td>
-				<td width="50%" align="left" valign="top" style="border-right-style:none; border-right-width:medium; border-top-style:solid; border-top-width:1; border-bottom-style:none; border-bottom-width:medium" height="41">
-				<h3>Communities &amp; Forums</h3>
-				</td>
-			</tr>
-			<tr>
-				<td width="50%" align="left" valign="top" style="border-style:none; border-width:medium; " height="36">
-				<img alt="Mountains" border="0" src="images/mount.gif" align="left" width="70" height="104">Look 
-				at my new online photo album filled with pictures from my vacations, 
-				sporting events, and my family.</td>
-				<td width="50%" align="left" valign="top" style="border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium; border-bottom-style:none; border-bottom-width:medium" height="36">
-				<!--webbot bot="PurpleText" preview="This is a place to create links to your favorite message boards / chat rooms / community web sites." -->
-				<table border="0" cellpadding="0" cellspacing="0" width="100%">
-					<tr>
-						<td valign="top" width="100%">
-						<ul>
-							<li><a href="http://www.example.com/people">Example.com</a>
-							</li>
-						</ul>
-						</td>
-					</tr>
-				</table>
-				</td>
-			</tr>
-		</table>
-		</center></td>
+		<h3>Chào m&#7915;ng &#273;&#7871;n v&#7899;i trang c&#7911;a t&#7899;</h3>
+		<p align="left">T&#7899; xây d&#7921;ng trang web này là mu&#7889;n chia s&#7867; v&#7873; gia &#273;ình 
+		nh&#7887; c&#7911;a b&#7843;n thân. C&#7843;m &#417;n &#273;ã ghé &#273;&#7871;n &#7841;</p></td>
 	</tr>
 </table>
 <p align="center"><small>
