--- a/feedback.htm
+++ b/feedback.htm
@@ -57,64 +57,8 @@ if(MSFPhover) { MSFPnav4n=MSFPpreload("_derived/photo.htm_cmp_sky010_vbtn.gif");
 		<td valign="top" width="5" style="border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium; border-bottom-style:none; border-bottom-width:medium">
 		</td>
 		<td valign="top" height="100%" style="border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium; border-bottom-style:none; border-bottom-width:medium">
-		<p>
-		<!--webbot bot="PurpleText" preview="Feedback Form - Customize the form below to collect the information you need. By default, the form data is saved to a text file on the web server using the FrontPage Save Results component. Edit the Form Properties to change this behavior." -->
-		</p>
-		<p>Tell me what you think about my web site.&nbsp; I welcome all of your 
-		comments and suggestions.</p>
-		<form method="POST" action="_derived/nortbots.htm" webbot-action="--WEBBOT-SELF--" onSubmit="location.href='_derived/nortbots.htm';return false;" webbot-onSubmit>
-			<!--webbot bot="SaveResults" u-file="_private/feedback.txt" s-format="TEXT/TSV" s-label-fields="TRUE" s-builtin-fields="Date Time REMOTE_NAME REMOTE_USER HTTP_USER_AGENT" s-form-fields startspan --><input TYPE="hidden" NAME="VTI-GROUP" VALUE="0"><!--webbot bot="SaveResults" endspan i-checksum="43374" -->
-			<p><strong>What kind of comment would you like to send?</strong></p>
-			<dl>
-				<dd><input type="radio" name="MessageType" value="Complaint">Complaint
-				<input type="radio" name="MessageType" value="Problem">Problem
-				<input type="radio" checked name="MessageType" value="Suggestion">Suggestion
-				<input type="radio" name="MessageType" value="Praise">Praise</dd>
-			</dl>
-			<p><strong>Subject&nbsp; </strong></p>
-			<blockquote>
-				<p><input type="text" size="26" maxlength="256" name="Subject"></p>
-			</blockquote>
-			<p><strong>Enter your comments in the space provided below:</strong></p>
-			<dl>
-				<dd><textarea name="Comments" rows="5" cols="42"></textarea></dd>
-			</dl>
-			<p><strong>Tell me how to get in touch with you:</strong></p>
-			<dl>
-				<dd>
-				<table>
-					<tr>
-						<td>Name</td>
-						<td>
-						<input type="text" size="35" maxlength="256" name="Username"></td>
-					</tr>
-					<tr>
-						<td>E-mail</td>
-						<td>
-						<input type="text" size="35" maxlength="256" name="UserEmail"></td>
-					</tr>
-					<tr>
-						<td>Tel</td>
-						<td>
-						<input type="text" size="35" maxlength="256" name="UserTel"></td>
-					</tr>
-					<tr>
-						<td>FAX</td>
-						<td>
-						<input type="text" size="35" maxlength="256" name="UserFAX"></td>
-					</tr>
-				</table>
-				</dd>
-			</dl>
-			<dl>
-				<dd>
-				<input type="checkbox" name="ContactRequested" value="ContactRequested"> 
-				Please contact me as soon as possible regarding this matter.</dd>
-			</dl>
-			<p><input type="submit" value="Submit Comments">
-			<input type="reset" value="Clear Form"></p>
-		</form>
-		</td>
+		Ch&#7883; &#273;&#7847;u t&#7899; tên là Linh. Ch&#7883; 27 tu&#7893;i, hi&#7879;n &#273;ang là ch&#7911; m&#7897;t quán cafe nho 
+		nh&#7887; t&#7841;i nhà</td>
 	</tr>
 </table>
 <p align="center"><small>
