--- a/interest.htm
+++ b/interest.htm
@@ -57,56 +57,7 @@ if(MSFPhover) { MSFPnav4n=MSFPpreload("_derived/feedback.htm_cmp_sky010_vbtn.gif
 		<td valign="top" width="5" style="border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium; border-bottom-style:none; border-bottom-width:medium">
 		</td>
 		<td valign="top" width="100%" height="100%" style="border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium; border-bottom-style:none; border-bottom-width:medium">
-		<p align="left">Here is a good place to describe a list of your hobbies, 
-		projects or interests.</p>
-		<table border="0" cellpadding="0" cellspacing="0" width="100%">
-			<tr>
-				<td valign="top" width="100%">
-				<ul>
-					<li><b>Autos</b> - I love cars and everything about them! Below 
-					is one of my favorite car related Web sites:
-					<ul>
-						<li><a href="http://www.example.com/"><b>Example.com</b></a>
-						</li>
-					</ul>
-					</li>
-					<li><b>Travel</b> - I'm a big travel buff. My family and I love 
-					traveling around the world. Below is a great travel site for 
-					booking tickets, or just to find out information on your destination.
-					<ul>
-						<li><a href="http://www.example.net/"><b>Example.net</b></a></li>
-					</ul>
-					</li>
-					<li><b>Investing and Money</b> - I've recently started investing. 
-					Below is a great site about managing your money and investing.
-					<ul>
-						<li><a href="http://www.example.com"><b>Example.com</b></a>
-						</li>
-					</ul>
-					</li>
-					<li><strong>Interest 1 </strong>- <em>Provide a description, 
-					or perhaps a picture here.</em>
-					<ul>
-						<li><em>Add a hyperlink here</em></li>
-					</ul>
-					</li>
-					<li><strong>Interest 2</strong> - <em>Provide a description, 
-					or perhaps a picture here.</em>
-					<ul>
-						<li><em>Add a hyperlink here</em></li>
-					</ul>
-					</li>
-					<li><strong>Interest 3</strong> - <em>Provide a description, 
-					or perhaps a picture here.</em>
-					<ul>
-						<li><em>Add a hyperlink here</em></li>
-					</ul>
-					</li>
-				</ul>
-				</td>
-			</tr>
-		</table>
-		</td>
+		M&#7865; t&#7899; n&#259;m nay 48 tu&#7893;i. M&#7865; t&#7899; là ng&#432;&#7901;i làm nông<p>&nbsp;</td>
 	</tr>
 </table>
 <p align="center"><small>
