--- a/photo.htm
+++ b/photo.htm
@@ -65,132 +65,12 @@ if(MSFPhover) { MSFPnav4n=MSFPpreload("_derived/feedback.htm_cmp_sky010_vbtn.gif
 		</td>
 		<td valign="top" width="100%" height="100%" style="border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium; border-bottom-style:none; border-bottom-width:medium">
 		
-		<h3 align="left">My Photo Gallery</h3>
+		Ch&#7883; th&#7913; 2 t&#7899; tên là Ánh. Hi&#7879;n t&#7841;i 24 tu&#7893;i. Làm công vi&#7879;c t&#7921; do<p>&nbsp;</p>
+		<p>
 		<br>
-		<p>Use a photo gallery to put pictures on your Web Site you would like to 
-		exchange with friends and family. Photos of new homes, graduations, weddings, 
-		baby pictures, or anything else can all be placed here.</p>
-		<!--webbot bot="PhotoAlbum" u-include="photogallery/photo26003/real.htm" clientside tag="BODY" startspan -->
-
-<picture file-href="photogallery/photo26003/real_p.htm" /> 
-<picture file-href="photogallery/photo26003/real_x.htm" />
-<table border="0" cellspacing="0" cellpadding="0" id="fpGalleryTable_1087">
-	<tr>
-		<td valign="top">
-		<table border="0" cellpadding="0" cellspacing="0" width="100%">
-			<tr>
-				<td colspan="2" height="1">
-				<script language="JavaScript1.1">
-document.write("<hr noshade='' style='height:1;color:black'>");
-</script>
-				</td>
-				<td width="10"><font color="white"></font></td>
-			</tr>
-			<tr>
-				<td valign="top"><a href="images/mount.gif">
-				<img alt="Mountains" border="0" vspace="10" hspace="10" src="photogallery/photo26003/mount.gif" width="67" height="100" title /></a>
-				</td>
-				<td width="130" height="123" valign="top">
-				<table width="130" border="0" cellspacing="0" cellpadding="0">
-					<tr valign="top">
-						<td height="10"><font color="white"></font></td>
-					</tr>
-					<tr valign="top">
-						<td></td>
-					</tr>
-					<tr valign="top">
-						<td></td>
-					</tr>
-				</table>
-				</td>
-				<td width="10"><font color="white"></font></td>
-			</tr>
-			<tr>
-				<td colspan="2" valign="bottom">
-				<script language="JavaScript1.1">
-document.write("<hr noshade='' style='height:1;color:black'>");
-</script>
-				</td>
-				<td width="10" valign="bottom"><font color="white"></font></td>
-			</tr>
-		</table>
-		</td>
-		<td valign="top">
-		<table border="0" cellpadding="0" cellspacing="0" width="100%">
-			<tr>
-				<td colspan="2" height="1">
-				<script language="JavaScript1.1">
-document.write("<hr noshade='' style='height:1;color:black'>");
-</script>
-				</td>
-				<td width="10"><font color="white"></font></td>
-			</tr>
-			<tr>
-				<td valign="top"><a href="images/mycat.jpg">
-				<img alt="My cat" border="0" vspace="10" hspace="10" src="photogallery/photo26003/mycat.jpg" width="89" height="100" title /></a>
-				</td>
-				<td width="130" height="123" valign="top">
-				<table width="130" border="0" cellspacing="0" cellpadding="0">
-					<tr valign="top">
-						<td height="10"><font color="white"></font></td>
-					</tr>
-					<tr valign="top">
-						<td></td>
-					</tr>
-					<tr valign="top">
-						<td></td>
-					</tr>
-				</table>
-				</td>
-				<td width="10"><font color="white"></font></td>
-			</tr>
-			<tr>
-				<td colspan="2" valign="bottom">
-				<script language="JavaScript1.1">
-document.write("<hr noshade='' style='height:1;color:black'>");
-</script>
-				</td>
-				<td width="10" valign="bottom"><font color="white"></font></td>
-			</tr>
-		</table>
-		</td>
-	</tr>
-	<tr>
-		<td valign="top">
-		<table border="0" cellpadding="0" cellspacing="0" width="100%">
-			<tr>
-				<td valign="top"><a href="images/parrot1.jpg">
-				<img alt="Parrot" border="0" vspace="10" hspace="10" src="photogallery/photo26003/parrot1.jpg" width="75" height="100" title /></a>
-				</td>
-				<td width="130" height="123" valign="top">
-				<table width="130" border="0" cellspacing="0" cellpadding="0">
-					<tr valign="top">
-						<td height="10"><font color="white"></font></td>
-					</tr>
-					<tr valign="top">
-						<td></td>
-					</tr>
-					<tr valign="top">
-						<td></td>
-					</tr>
-				</table>
-				</td>
-				<td width="10"><font color="white"></font></td>
-			</tr>
-			<tr>
-				<td colspan="2" valign="bottom">
-				<script language="JavaScript1.1">
-document.write("<hr noshade='' style='height:1;color:black'>");
-</script>
-				</td>
-				<td width="10" valign="bottom"><font color="white"></font></td>
-			</tr>
-		</table>
-		</td>
-	</tr>
-</table>
-
-<!--webbot bot="PhotoAlbum" i-checksum="18600" endspan --><p align="center">
+		</p>
+		<p>&nbsp;</p>
+		<p align="center">
 		<small>
 		<!--webbot bot="Navigation" s-orientation="horizontal" s-rendering="html" s-bar="Bars" s-btn-nml="&lt;A HREF=&quot;#URL#&quot; TARGET=&quot;#TARGET#&quot; STYLE=&quot;text-decoration: none;&quot;&gt;#LABEL#&lt;/A&gt;" s-btn-sel="#LABEL#" s-btn-sep="&amp;nbsp;|&amp;nbsp;" s-type="siblings" b-include-home="TRUE" b-include-up="FALSE" startspan --><nobr><A HREF="index.htm" TARGET="" STYLE="text-decoration: none;">Home</A></nobr>&nbsp;|&nbsp;<nobr><A HREF="aboutme.htm" TARGET="" STYLE="text-decoration: none;">t&#7899;</A></nobr>&nbsp;|&nbsp;<nobr><A HREF="interest.htm" TARGET="" STYLE="text-decoration: none;">m&#7865;</A></nobr>&nbsp;|&nbsp;<nobr>ch&#7883;&nbsp;gái</nobr>&nbsp;|&nbsp;<nobr><A HREF="feedback.htm" TARGET="" STYLE="text-decoration: none;">ch&#7883;&nbsp;gái</A></nobr><!--webbot bot="Navigation" i-checksum="62788" endspan -->
 		</small></p>
